# teaos

boot_teapot/: CMakeLists.txt
boot_teapot/include/: disk_load.asm  switch_to_pm.asm
boot_teapot/src/: mbr_boot_sect.asm  start.cpp
display/include/: contr_mem.h  low_level.h  screen.h
display/src/: start.cpp
